# e

./: .gitignore  CMakeLists.txt  RENDER_DEPLOY.md  databasemanager.cpp  mainwindow.h  package.json  remoteapiclient.cpp  remoteapiclient.h  render.yaml  server.js  serverconfig.h
backend/src/: server.js
cmake/: DeployQtRuntime.cmake
src/: databasemanager.h  main.cpp  mainwindow.cpp
